@@ -1,6 +1,6 @@
 Package: mi
-Version: 0.02-03.01
-Date: 2008-1-6
+Version: 0.02-03.02
+Date: 2008-1-8
 Title: Missing Data Imputation and Model Checking
 Author:
   Andrew Gelman <gelman@stat.columbia.edu>,
