@@ -1,4 +1,5 @@
 \name{mi.info.update}
+\alias{update.mi.info}
 \alias{mi.info.update}
 \alias{mi.info.update.type}
 \alias{mi.info.update.level}
@@ -13,33 +14,34 @@
 \alias{mi.info.update.other}
 \title{ function to update mi.info object to use for multiple imputation }
 \description{
-  This function is internal function to update the mi.info object.
+  This function is internal function to update the \code{mi.info} object.
 }
 \usage{
-mi.info.update(info, target, list)
-mi.info.update.type(info, list)
-mi.info.update.level(info, list)
-mi.info.update.include(info, list)
-mi.info.update.is.ID(info, list)
-mi.info.update.correlated(info, list)
-mi.info.update.transform(info, list)
-mi.info.update.imp.order(info, list)
-mi.info.update.determ.pred(info, list)
-mi.info.update.params(info, list)
-mi.info.update.imp.formula(info, list)
-mi.info.update.other(info, list)
+\method{update}{mi.info}(object, target, list, \dots)
+mi.info.update.type(object, list)
+mi.info.update.level(object, list)
+mi.info.update.include(object, list)
+mi.info.update.is.ID(object, list)
+mi.info.update.correlated(object, list)
+mi.info.update.transform(object, list)
+mi.info.update.imp.order(object, list)
+mi.info.update.determ.pred(object, list)
+mi.info.update.params(object, list)
+mi.info.update.imp.formula(object, list)
+mi.info.update.other(object, list)
 }
+
 \arguments{
-  \item{info}{ mi.info object that is result of mi.info function. }
-  \item{target}{ which part of mi.info object to modify. }
-  \item{list}{ list that has same length as the number of variables in the mi.info object.  Element which are left NULL will not be updated .}
+  \item{object}{\code{mi.info} object that is result of \code{mi.info} function. }
+  \item{target}{which part of \code{mi.info} object to modify. }
+  \item{list}{list that has same length as the number of variables in the mi.info object.  Element which are left NULL will not be updated .}
+  \item{\dots}{currently no function.}
 }
-\details{
-  ~~ If necessary, more details than the description above ~~
-}
+
 \value{
-  \item{info }{updated mi.info object.}
+  \item{info}{updated \code{mi.info} object.}
 }
+
 \references{
     Andrew Gelman and M. Grazia Pittau,  
     A flexible program for missing-data imputation and model checking, 
@@ -50,6 +52,7 @@ mi.info.update.other(info, list)
 
 \author{
   Masanao Yajima \email{yajima@stat.columbia.edu},
+  Yu-Sung Su \email{yusung@stat.columbia.edu},
   M.Grazia Pittau \email{grazia@stat.columbia.edu},
   Andrew Gelman \email{gelman@stat.columbia.edu}
 }
@@ -59,7 +62,15 @@ mi.info.update.other(info, list)
 }
 \examples{
 data(CHAIN)
-CHAIN.info<-mi.info(CHAIN)
-CHAIN.info<-mi.info.update.type(CHAIN.info, list(age.W1="continuous", b05.W1="unordered-categorical"))
+CHAIN.info <- mi.info(CHAIN)
+
+# You can update the mi.info object in the below two ways
+CHAIN.info <- update(CHAIN.info, "type", 
+  list(age.W1="continuous", b05.W1="unordered-categorical"))
+CHAIN.info <- mi.info.update.type(CHAIN.info, 
+  list(age.W1="continuous", b05.W1="unordered-categorical"))
 }
-\keyword{ models }
+
+
+\keyword{methods}
+\keyword{manip}
