@@ -1,4 +1,7 @@
-2008-1-6 Yu-Sung Su     <ys463@columbia.edu>  
+2008-1-8 Yu-Sung Su     <ys463@columbia.edu>  
+   * R/mi.info.update: make mi.info.update into S3 method.
+
+2008-1-7 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): depend abind package
    * array.append and array.append3 are obsolete.  Use abind instead.
 
